--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   intl_translation: ^0.20.0
+  number_to_words: ^1.0.0
 
 dev_dependencies:
   flutter_test:
